--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -3,7 +3,7 @@
 {% block nom %} Change password | {% endblock %}
 
 {% block extrahead %}
-<link rel="stylesheet" href="{% static 'login.css' %}">
+    <link rel="stylesheet" href="{% static 'login.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -11,30 +11,42 @@
         <div class="headerlogin">Change pasword</div>
         <form method="POST">
             {% csrf_token %}
-             <div class="input-field">
+            <div class="input-field">
                 {{ form.old_password }}
-               <label>ENTER YOUR OLD PASSWORD</label>
+                <label>ENTER YOUR OLD PASSWORD</label>
             </div>
 
             <div class="input-field">
-                {{ form.new_password1}}
-               <label>ENTER YOUR NEW PASSWORD</label>
+                {{ form.new_password1 }}
+                <label>ENTER YOUR NEW PASSWORD</label>
             </div>
 
             <div class="input-field">
-                {{ form.new_password2}}
-               <label>CONFIRM YOUR NEW PASSWORD</label>
+                {{ form.new_password2 }}
+                <label>CONFIRM YOUR NEW PASSWORD</label>
             </div>
 
             <div class="button">
-               <button type="submit">Change password</button>
+                <button type="submit">Change password</button>
             </div>
         </form>
+        <div class="buttonpswrd">
+            <button id="show" onclick="showOnClick()">Can't decide on a new password ? Click here</button>
+        </div>
+        <div class="input-field" id="inputcontainer" style="display:none">
+            <br>
+            <br>
+            <div id="generator">
+                <input type="text" placeholder="Your password will generate here" id="password" readonly="">
+                <br>
+                <br>
+                <button onclick="getPassword();" id="btn">Generate random password</button>
+            </div>
+        </div>
     </div>
+
 {% endblock %}
 
 {% block scripts %}
-<script>
 
-</script>
 {% endblock %}
