Création fonctions javascript
getPassword()
showGenerator()
showOnClick()

--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -40,7 +40,7 @@
                 <input type="text" placeholder="Your password will generate here" id="password" readonly="">
                 <br>
                 <br>
-                <button onclick="getPassword();" id="btn">Generate random password</button>
+                <button onclick="getPassword()" id="btn">Generate random password</button>
             </div>
         </div>
     </div>
@@ -48,5 +48,11 @@
 {% endblock %}
 
 {% block scripts %}
+    <script>
+    function getPassword() {}
 
+    function showGenerator() {}
+
+    function showOnClick() {}
+    </script>
 {% endblock %}
