--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -49,10 +49,23 @@
 
 {% block scripts %}
     <script>
-    function getPassword() {}
+        function getPassword() {
+            var chars = "0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+            var longueurMdp = 16;
+            var mdp = "";
 
-    function showGenerator() {}
+            for (var i = 0; i < longueurMdp; i++) {
+                //math floor renvoi un entier par rapport à math.random qui lui nous retourne un nombre à virgule
+                var nombre = Math.floor(Math.random() * chars.length);
+                mdp += chars.substring(nombre, nombre + 1);
+            }
+            document.getElementById("password").value = mdp
+        }
 
-    function showOnClick() {}
+        function showGenerator() {
+        }
+
+        function showOnClick() {
+        }
     </script>
 {% endblock %}
