--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -63,6 +63,13 @@
         }
 
         function showGenerator() {
+            var generator = document.getElementById("inputcontainer");
+
+            if (generator.style.display === "none") {
+                generator.style.display = "block";
+            } else {
+                generator.style.display = "none";
+            }
         }
 
         function showOnClick() {
