--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -73,6 +73,7 @@
         }
 
         function showOnClick() {
+            document.getElementById("show").addEventListener("click", showGenerator);
         }
     </script>
 {% endblock %}
