Création du générateur à l'aide des noeuds

--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -31,16 +31,12 @@
             </div>
         </form>
         <div class="buttonpswrd">
-            <button id="show" onclick="showOnClick()">Can't decide on a new password ? Click here</button>
+            <button id="show" onclick="showOnClick()" >Can't decide on a new password ? Click here</button>
         </div>
         <div class="input-field" id="inputcontainer" style="display:none">
-            <br>
-            <br>
             <div id="generator">
-                <input type="text" placeholder="Your password will generate here" id="password" readonly="">
-                <br>
-                <br>
-                <button onclick="getPassword()" id="btn">Generate random password</button>
+{#                <input type="text" placeholder="Your password will generate here" id="password" readonly="">#}
+{#                <button onclick="getPassword()" id="btn">Generate random password</button>#}
             </div>
         </div>
     </div>
@@ -49,18 +45,23 @@
 
 {% block scripts %}
     <script>
+
+        //Génération de mot de passe de manière aléatoire
+
         function getPassword() {
             var chars = "0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
             var longueurMdp = 16;
             var mdp = "";
 
             for (var i = 0; i < longueurMdp; i++) {
-                //math floor renvoi un entier par rapport à math.random qui lui nous retourne un nombre à virgule
+                //Math.floor renvoi un entier par rapport à Math.random qui lui nous retourne un nombre à virgule
                 var nombre = Math.floor(Math.random() * chars.length);
                 mdp += chars.substring(nombre, nombre + 1);
             }
             document.getElementById("password").value = mdp
         }
+
+        //Afficher et cacher le generateur de mot de passe
 
         function showGenerator() {
             var generator = document.getElementById("inputcontainer");
@@ -72,8 +73,33 @@
             }
         }
 
+        //Fonction qui permet l'affichage après clic, avec callback de showGenerator
+
         function showOnClick() {
             document.getElementById("show").addEventListener("click", showGenerator);
         }
+
+        //Démonstration de noeuds en créant l'input puis le button
+
+            //Stockage des éléments HTML dans des variables
+            var inputgenerator = document.createElement('input');
+            var buttongenerator = document.createElement('button');
+
+            //Stockage du texte qui sera attribué au boutton
+            var buttontext = document.createTextNode("Click here to generate random password");
+
+            //Affectation des attributs aux éléments HTML
+            inputgenerator.setAttribute('placeholder','your generated password will show up here');
+            inputgenerator.setAttribute('id','password');
+            buttongenerator.setAttribute('onclick','getPassword()');
+            buttongenerator.setAttribute('id','btn');
+
+            //Attribution du texte au boutton
+            buttongenerator.appendChild(buttontext);
+
+            //Assignation des éléments HTML à notre div via ID
+            document.getElementById("generator").appendChild(inputgenerator);
+            document.getElementById("generator").appendChild(buttongenerator);
+
     </script>
 {% endblock %}
