Attributs + br + CSS
Modification dans attributs noeuds.
Ajout éléments BR.
Mise en forme avec CSS

--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -31,7 +31,7 @@
             </div>
         </form>
         <div class="buttonpswrd">
-            <button id="show" onclick="showOnClick()" >Can't decide on a new password ? Click here</button>
+            <button id="show" onclick="showOnClick()" >PASSWORD GENERATOR</button>
         </div>
         <div class="input-field" id="inputcontainer" style="display:none">
             <div id="generator">
@@ -84,13 +84,16 @@
             //Stockage des éléments HTML dans des variables
             var inputgenerator = document.createElement('input');
             var buttongenerator = document.createElement('button');
+            var br = document.createElement('br')
+            var br2 = document.createElement('br')
 
             //Stockage du texte qui sera attribué au boutton
             var buttontext = document.createTextNode("Click here to generate random password");
 
             //Affectation des attributs aux éléments HTML
-            inputgenerator.setAttribute('placeholder','your generated password will show up here');
+            inputgenerator.setAttribute('placeholder','Your generated password will show up here');
             inputgenerator.setAttribute('id','password');
+            inputgenerator.setAttribute('readonly','');
             buttongenerator.setAttribute('onclick','getPassword()');
             buttongenerator.setAttribute('id','btn');
 
@@ -99,7 +102,11 @@
 
             //Assignation des éléments HTML à notre div via ID
             document.getElementById("generator").appendChild(inputgenerator);
+            document.getElementById("generator").appendChild(br)
+            document.getElementById("generator").appendChild(br2)
             document.getElementById("generator").appendChild(buttongenerator);
+
+
 
     </script>
 {% endblock %}
