--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -61,11 +61,15 @@
             document.getElementById("password").value = mdp
         }
 
+        //Récupérer la div qui contient le générateur
+
+        function getGenerator() {
+            return document.getElementById("inputcontainer");
+        }
+
         //Afficher et cacher le generateur de mot de passe
 
-        function showGenerator() {
-            var generator = document.getElementById("inputcontainer");
-
+        function showGenerator(generator) {
             if (generator.style.display === "none") {
                 generator.style.display = "block";
             } else {
@@ -73,10 +77,10 @@
             }
         }
 
-        //Fonction qui permet l'affichage après clic, avec callback de showGenerator
+        //Fonction qui permet l'affichage après clic, avec callback
 
         function showOnClick() {
-            document.getElementById("show").addEventListener("click", showGenerator);
+            showGenerator(getGenerator());
         }
 
         //Démonstration de noeuds en créant l'input puis le button
@@ -84,8 +88,8 @@
             //Stockage des éléments HTML dans des variables
             var inputgenerator = document.createElement('input');
             var buttongenerator = document.createElement('button');
-            var br = document.createElement('br')
-            var br2 = document.createElement('br')
+            var br = document.createElement('br');
+            var br2 = document.createElement('br');
 
             //Stockage du texte qui sera attribué au boutton
             var buttontext = document.createTextNode("Click here to generate random password");
@@ -102,11 +106,9 @@
 
             //Assignation des éléments HTML à notre div via ID
             document.getElementById("generator").appendChild(inputgenerator);
-            document.getElementById("generator").appendChild(br)
-            document.getElementById("generator").appendChild(br2)
+            document.getElementById("generator").appendChild(br);
+            document.getElementById("generator").appendChild(br2);
             document.getElementById("generator").appendChild(buttongenerator);
-
-
 
     </script>
 {% endblock %}
