--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -49,7 +49,7 @@
         //Génération de mot de passe de manière aléatoire
 
         function getPassword() {
-            var chars = "0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@#!?-_$€";
+            var chars = "0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@#!?-_$€/%&{(})";
             var longueurMdp = 16;
             var mdp = "";
 
