--- a/EDW_Academy/apps/userprofile/templates/change_password.html
+++ b/EDW_Academy/apps/userprofile/templates/change_password.html
@@ -31,13 +31,10 @@
             </div>
         </form>
         <div class="buttonpswrd">
-            <button id="show" onclick="showOnClick()" >PASSWORD GENERATOR</button>
+            <button id="show">PASSWORD GENERATOR</button>
         </div>
-        <div class="input-field" id="inputcontainer" style="display:none">
-            <div id="generator">
-{#                <input type="text" placeholder="Your password will generate here" id="password" readonly="">#}
-{#                <button onclick="getPassword()" id="btn">Generate random password</button>#}
-            </div>
+        <div class="input-field" id="inputcontainer" >
+            <div id="generator"></div>
         </div>
     </div>
 
@@ -61,54 +58,79 @@
             document.getElementById("password").value = mdp
         }
 
+        function showGenerator() {
+                //Stockage des éléments HTML dans des variables
+                const inputgenerator = document.createElement('input');
+
+                //Affectation des attributs aux éléments HTML
+                inputgenerator.setAttribute('placeholder','Your generated password will show up here');
+                inputgenerator.setAttribute('id','password');
+                inputgenerator.setAttribute('readonly','');
+
+                document.getElementById("generator").appendChild(inputgenerator);
+
+                //Afficher qu'une seule fois l'input après click
+                document.getElementById("show").removeEventListener("click", showGenerator)
+            }
+
+            //Events après click
+            document.getElementById("show").addEventListener("click", showGenerator);
+            document.getElementById("show").addEventListener("click", getPassword);
+
+
+
         //Récupérer la div qui contient le générateur
 
-        function getGenerator() {
-            return document.getElementById("inputcontainer");
-        }
+        {#function getGenerator(generator) {#}
+        {#    document.getElementById("inputcontainer")#}
+
 
         //Afficher et cacher le generateur de mot de passe
 
-        function showGenerator(generator) {
-            if (generator.style.display === "none") {
-                generator.style.display = "block";
-            } else {
-                generator.style.display = "none";
-            }
-        }
+        {#function showGenerator(generator) {#}
+        {#    if (generator.style.display === "none") {#}
+        {#        generator.style.display = "block";#}
+        {#    } else {#}
+        {#        generator.style.display = "none";#}
+        {#    }#}
+
 
         //Fonction qui permet l'affichage après clic, avec callback
 
-        function showOnClick() {
-            showGenerator(getGenerator());
-        }
+        {#function showOnClick() {#}
+        {#    showGenerator(getGenerator());#}
 
-        //Démonstration de noeuds en créant l'input puis le button
 
-            //Stockage des éléments HTML dans des variables
-            var inputgenerator = document.createElement('input');
-            var buttongenerator = document.createElement('button');
-            var br = document.createElement('br');
-            var br2 = document.createElement('br');
 
-            //Stockage du texte qui sera attribué au boutton
-            var buttontext = document.createTextNode("Click here to generate random password");
 
-            //Affectation des attributs aux éléments HTML
-            inputgenerator.setAttribute('placeholder','Your generated password will show up here');
-            inputgenerator.setAttribute('id','password');
-            inputgenerator.setAttribute('readonly','');
-            buttongenerator.setAttribute('onclick','getPassword()');
-            buttongenerator.setAttribute('id','btn');
 
-            //Attribution du texte au boutton
-            buttongenerator.appendChild(buttontext);
-
-            //Assignation des éléments HTML à notre div via ID
-            document.getElementById("generator").appendChild(inputgenerator);
-            document.getElementById("generator").appendChild(br);
-            document.getElementById("generator").appendChild(br2);
-            document.getElementById("generator").appendChild(buttongenerator);
+        {#//Démonstration de noeuds en créant l'input puis le button#}
+        {##}
+        {#    //Stockage des éléments HTML dans des variables#}
+        {#    var inputgenerator = document.createElement('input');#}
+        {#    var buttongenerator = document.createElement('button');#}
+        {#    var br = document.createElement('br');#}
+        {#    var br2 = document.createElement('br');#}
+        {##}
+        {#    //Stockage du texte qui sera attribué au boutton#}
+        {#    var buttontext = document.createTextNode("Click here to generate random password");#}
+        {##}
+        {#    //Affectation des attributs aux éléments HTML#}
+        {#    inputgenerator.setAttribute('placeholder','Your generated password will show up here');#}
+        {#    inputgenerator.setAttribute('id','password');#}
+        {#    inputgenerator.setAttribute('readonly','');#}
+        {##}
+        {#    buttongenerator.setAttribute('onclick','getPassword()');#}
+        {#    buttongenerator.setAttribute('id','btn');#}
+        {##}
+        {#    //Attribution du texte au boutton#}
+        {#    buttongenerator.appendChild(buttontext);#}
+        {##}
+        {#    //Assignation des éléments HTML à notre div via ID#}
+        {#    document.getElementById("generator").appendChild(inputgenerator);#}
+        {#    document.getElementById("generator").appendChild(br);#}
+        {#    document.getElementById("generator").appendChild(br2);#}
+        {#    document.getElementById("generator").appendChild(buttongenerator);#}
 
     </script>
 {% endblock %}
