--- a/EDW_Academy/apps/core/templates/admin.html
+++ b/EDW_Academy/apps/core/templates/admin.html
@@ -32,7 +32,7 @@
                 document.getElementById("txtHint").innerHTML = this.response;
             }
         };
-        xhttp.open('GET', /adminpage/ + str, true);
+        xhttp.open('GET', /adminpage/ + str, false);
         xhttp.send();
     }
 </script>
